welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:29: error: value recule is not a member of Unit
possible cause: maybe a semicolon is missing before `value recule'?
}recule(7)
 ^